# singleton

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  setup.sh
.claude/skills/: focus.md  new-thread.md  threads.md
.github/plugin/: marketplace.json  mcp.json  plugin.json
.github/plugin/skills/singleton/: SKILL.md
.github/workflows/: release.yml  test.yml
crates/singleton-broker/: Cargo.toml
crates/singleton-broker/src/: lib.rs
crates/singleton-cli/: Cargo.toml
crates/singleton-cli/src/: main.rs  update.rs
crates/singleton-cli/tests/: stdio_mcp.rs
crates/singleton-config/: Cargo.toml
crates/singleton-config/src/: lib.rs
crates/singleton-copilot/: Cargo.toml
crates/singleton-copilot/src/: lib.rs
crates/singleton-core/: Cargo.toml
crates/singleton-core/src/: lib.rs
crates/singleton-host/: Cargo.toml
crates/singleton-host/src/: lib.rs
crates/singleton-mcp/: Cargo.toml
crates/singleton-mcp/src/: lib.rs
crates/singleton-remote/: Cargo.toml
crates/singleton-remote/src/: lib.rs
crates/singleton-store/: Cargo.toml
crates/singleton-store/src/: lib.rs
crates/singleton-test-support/: Cargo.toml
crates/singleton-test-support/src/: lib.rs
docs/: foreground-agent-coordination.md  installation.md  remote-host-fast-follow.md
hooks/: worker-notify.sh  worker-pretool.sh  worker-stop.sh
project_tasks/: 0_bootstrap.md  1_streamed-architecture-reset.md  2_agent-session-mcp-pivot.md  backlog.md
scripts/: install.sh
spec/: interfaces.md  spec.md  tests.md  user_flows.md
src/singleton/: cli.py  daemon.py  hooks.py  hub.py  mcp_server.py  store.py  worker.py
tests/: test_daemon.py  test_hooks.py  test_hub.py  test_mcp.py  test_store.py  test_tui.py  test_worker.py
