[workspace]
members = [
    "crates/singleton-core",
    "crates/singleton-config",
    "crates/singleton-store",
    "crates/singleton-host",
    "crates/singleton-test-support",
    "crates/singleton-broker",
    "crates/singleton-mcp",
    "crates/singleton-remote",
    "crates/singleton-copilot",
    "crates/singleton-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/nrakover/singleton"

[workspace.dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.54", features = ["derive"] }
futures-core = "0.3.31"
fs2 = "0.4.3"
github-copilot-sdk = { version = "1.0.3", default-features = false }
rmcp = { version = "1.8.0", features = ["server", "transport-io"] }
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
schemars = { version = "1.1.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.24.0"
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.17"
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
