[project]
name = "singleton"
version = "0.1.0"
description = "A single, persistent hub conversation for managing background agent threads"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "watchfiles",
    "fastmcp",
]

[project.scripts]
singleton = "singleton.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/singleton"]

[tool.uv]
package = true

[tool.uv.sources]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "ty>=0.0.1a0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
