[package]
name = "singleton-broker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
singleton-core = { path = "../singleton-core" }
singleton-host = { path = "../singleton-host" }
singleton-store = { path = "../singleton-store" }
tokio.workspace = true

[dev-dependencies]
singleton-test-support = { path = "../singleton-test-support" }
tempfile.workspace = true

[lints]
workspace = true
