[package]
name = "singleton-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
live-copilot = ["singleton-copilot/live-copilot"]

[[bin]]
name = "singleton"
path = "src/main.rs"

[dependencies]
clap.workspace = true
fs2.workspace = true
singleton-broker = { path = "../singleton-broker" }
singleton-config = { path = "../singleton-config" }
singleton-copilot = { path = "../singleton-copilot" }
singleton-core = { path = "../singleton-core" }
singleton-host = { path = "../singleton-host" }
singleton-mcp = { path = "../singleton-mcp" }
singleton-remote = { path = "../singleton-remote" }
singleton-store = { path = "../singleton-store" }
singleton-test-support = { path = "../singleton-test-support" }
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
rmcp.workspace = true
serde_json.workspace = true

[lints]
workspace = true
