[package]
name = "singleton-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
singleton-core = { path = "../singleton-core" }
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
