[package]
name = "singleton-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
singleton-core = { path = "../singleton-core" }
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
