[package]
name = "singleton-remote"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
live-ssh = []

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
singleton-config = { path = "../singleton-config" }
singleton-core = { path = "../singleton-core" }
singleton-store = { path = "../singleton-store" }
tokio.workspace = true

[lints]
workspace = true
