[package]
name = "singleton-test-support"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
singleton-core = { path = "../singleton-core" }
tokio.workspace = true

[lints]
workspace = true
